# protoedit

./: Cargo.toml  LICENSE  README.md
data/: ints.pb  mega.pb  test_data_1.pb
data/for_tests/import_tests/: 1.proto  12.proto  13.proto  2.proto  3.proto  7.proto
data/for_tests/import_tests/dir/: 4.proto
resources/: bytes.pb  bytes.proto  ints.proto  mega.proto  str.pb  str.proto  test_data_1.proto
resources/test/import_tests/: 10.proto  5.proto  6.proto  8.proto  9.proto
resources/test/import_tests/dir/: 11.proto
src/: main.rs  pb.pest  proto.rs  text_edit.rs  trz.rs  typedefs.rs  view.rs  wire.rs
